--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -10748,3 +10748,61 @@ tudy-right-main {
   display: block;
   cursor: pointer;
 }
+
+/* partnership_box_content_1 */
+
+.partnership_box {
+  overflow: hidden;
+}
+.partnership_box:hover > .partnership_box_content_2 {
+  z-index: 3;
+  bottom: 0;
+}
+.partnership_box_content_1 {
+  height: 300px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 20px;
+  background-color: #33333311;
+  box-shadow: 0 0 1px 1px #33333322;
+  border-radius: 20px;
+}
+.partnership_box_content_2 {
+  position: absolute;
+  background-color: #33333311;
+  bottom: -100%;
+  height: 300px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 20px;
+  background-color: #000;
+  box-shadow: 0 0 1px 1px #33333322;
+  border-radius: 20px;
+  transition: all 0.3s ease-in-out;
+  color: #fff;
+}
+
+/* tools */
+.white-lable-tool .toolsLogo {
+  border: none;
+}
+
+.white-lable-tool .toolsLogo img {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain;
+  filter: brightness(0) invert(1);
+  -webkit-filter: brightness(0) invert(1);
+}
+
+/* Featured */
+.featured .newsLogo{
+  border: none;
+}
+.featured .newsLogo img {
+  max-width: 100%;
+  filter: grayscale(100%);
+  max-height: 100%;
+}
