--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -1234,6 +1234,13 @@
 
   outline-offset: -5px;
 }
+
+.cta_solution h4{
+text-align: center;
+}
+.cta_solution .content {
+text-align: center;
+}
 }
 @media (min-width: 1280px) {
   .containerFull {
