--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -8653,6 +8653,8 @@ table tbody tr td:nth-child(2) {
   transition: all 0.3s ease-in-out;
   max-height: 100%;
   object-fit: contain;
+}
+.toolsHome .toolsLogo img{
   filter: brightness(0) invert(1);
   -webkit-filter: brightness(0) invert(1);
 }
@@ -11634,7 +11636,7 @@ text-align: center;
   -o-transition: max-height 1s ease-in-out;
 }
 .leftWhatMenu ul li p{
-  font-size: 30px;
+  font-size: 28px;
   font-weight: 600;
 }
 .leftWhatMenu ul li:before {
@@ -11727,15 +11729,16 @@ text-align: center;
 }
 .clientLogoBox{
   width: 100%;
-  height: auto;
+  height: 80px;
   padding: 10px 5px;
   margin: 15px 0;
+  text-align: center;
 }
 .clientLogoBox img{
  filter: brightness(0) invert(1);
  -webkit-filter: brightness(0) invert(1);
-  width: 100%;
-  height: auto;
+  max-width: 100%;
+  max-height: 100%;
   object-fit: contain;
 }
 .headerRightWhy{
@@ -11801,4 +11804,119 @@ text-align: center;
 }
 .leftMapAddess h4{
   color:var(--red-color)
+}
+.leftWhatMenu ul li p{
+  position: relative;
+}
+.leftWhatMenu ul li p:after{
+  content: "\f078";
+  position: absolute;
+  top:10px;
+  right: 5px;
+  font-family: var(--fa-style-family, "Font Awesome 6 Free");
+  font-weight: var(--fa-style, 900);
+  font-size: 18px;
+}
+.leftWhatMenu ul li.active p:after{
+  content: '\f077';
+}
+.itemClientLogo{
+  width: calc(100% / 8 - 20px);
+  margin:0 10px;
+}
+.boxCaseImg{
+  width: 100%;
+  height: auto;
+}
+.boxCaseImg img{
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain;
+}
+.itemCaseStudyNumber{
+  position: absolute;
+  top: 102px;
+  left: 0;
+  width: 168px;
+}
+.itemCaseStudyNumber p, .itemCaseStudyNumber2 p{
+  font-size: 13px;
+}
+.itemCaseStudyNumber2{
+  position: absolute;
+  top: 102px;
+  left: 173px;
+  width: 168px;
+}
+.itemCaseStudyBox{
+  background: url(/assets/images/box-design.svg) no-repeat;
+  width: 100%;
+  height: 200px;
+}
+.caseStudyRight{
+  height: 100%;
+  background:var(--dark-blue-color);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.dottedImg{
+  width: 82px;
+  height: 137px;
+  background: url(/assets/images/dotted.svg) no-repeat;
+  background-position-y: -64px;
+  background-position-x: -15px;
+}
+.caseStudyLogo{
+  width: 130px;
+  height:70px;
+  padding: 10px;
+  background: #fff;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+}
+.caseStudyLogo img{
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain;
+}
+.caseStudyBottom{
+  text-align: right;
+}
+.caseStudyBottom a{
+  display: inline-block;
+  color: #000;
+  background: #fff;
+  border-radius: 40px;
+  -webkit-border-radius: 40px;
+  -moz-border-radius: 40px;
+  -ms-border-radius: 40px;
+  -o-border-radius: 40px;
+  padding: 8px 30px;
+  font-size: 17px;
+  font-weight: 600;
+}
+.caseStudyBottom p{
+  color:#fff;
+  margin-top:10px ;
+}
+.caseStudyImgWeb{
+  position: absolute;
+  left: -130px;
+  top: 50%;
+  transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  -o-transform: translateY(-50%);
+  width:calc(100% + 120px);
+  height: auto;
+}
+.caseStudyImgWeb img{
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain;
 }
