--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -608,7 +608,7 @@ section {
 }
 
 .header.stricky-fixed {
-  position: fixed;
+  position: fixed !important;
   z-index: 999;
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15) !important;
   background: rgb(255, 255, 255);
