--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -11954,3 +11954,223 @@ text-align: center;
 .fontSmall{
   font-size: 15px;
 }
+
+/* we strong css 09-04-2025 */
+.weStrongHome{
+  background: #000;
+  position: relative;
+  z-index: 1;
+  overflow: hidden;
+}
+.weStrongHome h3{
+  color: #fff;
+}
+.leftBoxStrong{
+  width: 40%;
+  height: 300px;
+}
+.leftBoxStrong img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 10px;
+}
+.strongBoxHome{
+  background: rgba(255,255,255,0.2);
+  backdrop-filter: blur(10px);
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+  padding: 20px;
+  border:1px solid #666;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  position: relative;
+}
+.rightBoxStrong{
+  width: 55%;
+}
+.rightBoxStrong p{
+  color:#ccc;
+  font-size: 15px;
+}
+.weStrongHome:after{
+  content: '';
+  position: absolute;
+  bottom: -300px;
+  left: -300px;
+  width: 700px;
+  height: 700px;
+  background: url(/assets/images/icons/blur-culcle.png) no-repeat;
+  background-size: cover;
+  z-index: -1;
+  opacity: .55;
+
+}
+.weStrongHome:before{
+  content: '';
+  position: absolute;
+  top: -300px;
+  right: -300px;
+  width: 700px;
+  height: 700px;
+  background: url(/assets/images/icons/blur-culcle.png) no-repeat;
+  background-size: cover;
+  z-index: -1;
+  opacity: .4;
+}
+.boxStronItegHome{
+  background: rgba(255,255,255,0.2);
+  backdrop-filter: blur(10px);
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+  padding: 20px;
+  border:1px solid #666;
+}
+.boxStrongIcon i{
+  color:#ccc;
+}
+.glossyBorder{
+  opacity:.8;
+  position: absolute;
+  top: -1px;
+  left: 10%;
+  width: 100px;
+  height: 2px;
+  z-index: 1;
+  background: linear-gradient(to right,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 53%,rgba(255,255,255,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+
+}
+.glossyBorder2{
+  opacity:.8;
+  position: absolute;
+  bottom: -1px;
+  left: 30%;
+  width: 100px;
+  height: 2px;
+  z-index: 1;
+  background: linear-gradient(to right,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 53%,rgba(255,255,255,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+
+}
+.glossyBorder3{
+  opacity:.8;
+  position: absolute;
+  bottom: 10%;
+  right: -1px;
+  width: 2px;
+  height: 100px;
+  z-index: 1;
+  /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#ff0000+0,ffbcbc+100&0.46+0,0.31+100 */
+background: linear-gradient(135deg,  rgba(255,0,0,0.46) 0%,rgba(255,188,188,0.31) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+
+}
+
+/* industries css 09-04-2025 */
+.itemSixStep {
+  height: 328px;
+  border-radius: 20px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
+}
+
+.flip-box {
+  height: 100%;
+  transform-style: preserve-3d;
+  perspective: 1000px;
+}
+
+.flip-box-front,
+.flip-box-back {
+  background-size: cover;
+  background-position: center;
+  transition: transform 0.7s cubic-bezier(.4, .2, .2, 1);
+  backface-visibility: hidden;
+  border-radius: 20px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
+}
+
+.flip-box-front {
+  padding: 10px;
+  position: relative;
+  z-index: 1;
+  transform: rotateY(0deg);
+  transform-style: preserve-3d;
+  height: 100%;
+  background: linear-gradient(135deg,  rgba(255,0,0,0.43) 0%,rgba(255,0,0,0.06) 100%);
+}
+
+.flip-box-back {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  transform: rotateY(180deg);
+  transform-style: preserve-3d;
+  background: #000;
+}
+
+.flip-box:hover .flip-box-front {
+  transform: rotateY(-180deg);
+}
+
+.flip-box:hover .flip-box-back {
+  transform: rotateY(0deg);
+}
+
+.flip-box .inner {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 85%;
+  z-index: 2;
+  transform: translateY(-50%) translateZ(120px) scale(0.95) translateX(-53%);
+  perspective: inherit;
+  -webkit-transform: translateY(-50%) translateZ(120px) scale(0.95) translateX(-53%);
+  -moz-transform: translateY(-50%) translateZ(120px) scale(0.95) translateX(-53%);
+  -ms-transform: translateY(-50%) translateZ(120px) scale(0.95) translateX(-53%);
+  -o-transform: translateY(-50%) translateZ(120px) scale(0.95) translateX(-53%);
+}
+
+.innerServices {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  flex-direction: column;
+}
+.industriesImg{
+  width: 100%;
+  height: 200px;
+}
+.industriesImg img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 20px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
+  transform: skewY(3deg);
+  -webkit-transform: skewY(3deg);
+  -moz-transform: skewY(3deg);
+  -ms-transform: skewY(3deg);
+  -o-transform: skewY(3deg);
+}
+.flip-box-back p{
+  color: #fff;
+  text-align: center;
+}
