--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -146,7 +146,9 @@ section {
 .large_heading2 {
   font-size: 55px;
 }
-
+.large_heading3 {
+  font-size: 90px;
+}
 .heading {
   font-size: 45px;
 }
@@ -203,7 +205,7 @@ section {
   font-family: "Lora", serif;
 }
 .header {
-  position: absolute;
+  /* position: absolute; */
   z-index: 999;
   width: 100%;
 }
@@ -1510,8 +1512,12 @@ section {
 .inneritemTestimonial {
   padding: 30px;
   background: #fff;
-  border-radius: 10px;
-  border: 1px solid #ddd;
+  border-radius: 20px;
+  border: 1px solid var(--red-color);
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
 }
 
 .testimonialItemHeader {
@@ -1523,6 +1529,7 @@ section {
   -webkit-box-orient: vertical;
   overflow: hidden;
   text-overflow: ellipsis;
+  color:var(--red-color)
 }
 .testimonial-content {
   display: -webkit-box;
@@ -11708,17 +11715,10 @@ text-align: center;
 }
 .badgeBox{
   width: 100%;
-  height: 90px;
+  height: 80px;
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 3px;
-  background: #fff;
-  border-radius: 5px;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  -ms-border-radius: 5px;
-  -o-border-radius: 5px;
   filter: grayscale(1);
   -webkit-filter: grayscale(1);
 }
@@ -12066,9 +12066,7 @@ text-align: center;
   width: 2px;
   height: 100px;
   z-index: 1;
-  /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#ff0000+0,ffbcbc+100&0.46+0,0.31+100 */
-background: linear-gradient(135deg,  rgba(255,0,0,0.46) 0%,rgba(255,188,188,0.31) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-
+  background: linear-gradient(to bottom,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 53%,rgba(255,255,255,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 }
 
 /* industries css 09-04-2025 */
@@ -12174,4 +12172,323 @@ background: linear-gradient(135deg,  rgba(255,0,0,0.46) 0%,rgba(255,188,188,0.31
   color: #fff;
   text-align: center;
   font-size: 15px;
+}
+
+/* banner home */
+.homeBanner{
+  background: #000;
+  position: relative;
+  z-index: 1;
+  overflow: hidden;
+}
+.homeBanner:after{
+  content: '';
+  position: absolute;
+  top: -300px;
+  left: -300px;
+  width: 800px;
+  height: 800px;
+  background: url(/assets/images/icons/blur-culcle.png) no-repeat;
+  background-size: cover;
+  z-index: -1;
+  opacity: .4;
+
+}
+.homeBanner:before{
+  content: '';
+  position: absolute;
+  bottom: -300px;
+  right: -300px;
+  width: 800px;
+  height: 800px;
+  background: url(/assets/images/icons/blur-culcle.png) no-repeat;
+  background-size: cover;
+  z-index: -1;
+  opacity: .4;
+}
+.homeBannerText{
+  border:1px solid #e0e0e0;
+  border-radius: 40px;
+  -webkit-border-radius: 40px;
+  -moz-border-radius: 40px;
+  -ms-border-radius: 40px;
+  -o-border-radius: 40px;
+  color: #fff;
+  padding: 8px 40px;
+}
+.btnHomeBanner{
+  display: inline-block;
+  padding:10px 25px;
+  border-radius: 40px;
+  -webkit-border-radius: 40px;
+  -moz-border-radius: 40px;
+  -ms-border-radius: 40px;
+  -o-border-radius: 40px;
+  background: var(--red-color);
+  color: #fff;
+  padding-right: 40px;
+  position: relative;
+  z-index: 1;
+  border:1px solid transparent;
+}
+.btnHomeBanner span{
+  position: absolute;
+  top:5px;
+  right: -10px;
+  display: inline-flex;
+  background: #fff;
+  color: var(--red-color);
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  width: 35px;
+  height: 35px;
+  align-items: center;
+  justify-content: center;
+  font-size:20px;
+}
+.btnHomeBanner span i{
+  transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  font-weight: 900;
+}
+.btnHomeBanner:hover{
+  border-color:var(--red-color);
+  background:transparent;
+}
+.btnHomeBanner2:hover{
+  border-color: transparent;
+  background: var(--red-color);
+}
+.btnHomeBanner2{
+  display: inline-block;
+  padding:10px 25px;
+  border-radius: 40px;
+  -webkit-border-radius: 40px;
+  -moz-border-radius: 40px;
+  -ms-border-radius: 40px;
+  -o-border-radius: 40px;
+  background: transparent;
+  color: #fff;
+  border:1px solid var(--red-color);
+  padding-right: 40px;
+  position: relative;
+  z-index: 1;
+  margin-left: 40px;
+}
+.btnHomeBanner2 span{
+  position: absolute;
+  top:5px;
+  right: -10px;
+  display: inline-flex;
+  background: #fff;
+  color: var(--red-color);
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  width: 35px;
+  height: 35px;
+  align-items: center;
+  justify-content: center;
+  font-size:20px;
+}
+.btnHomeBanner2 span i{
+  transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  font-weight: 900;
+}
+.googleParterLogoBox{
+  width: 100%;
+  height: 120px;
+}
+.googleParterLogoBox img{
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: cover;
+}
+.bottomLogoCertificate{
+  display: block;
+  margin-top: 3rem;
+  background: rgba(255,255,255,0.2);
+  backdrop-filter: blur(10px);
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+  padding: 20px;
+  border:1px solid #666;
+  position: relative;
+}
+.conversionBox{
+  width: 180px;
+}
+.imgConversionCenter{
+  width: 100%;
+  height: 100%;
+  position: relative;
+  z-index: 1;
+}
+.imgConversionCenter img{
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain;
+}
+.conversionBox .fontSmall{
+  font-size: 12px;
+}
+.imgConversionCenter:before{
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 500px;
+  height: 500px;
+  background: url(/assets/images/icons/blur-culcle.png) no-repeat;
+  background-size: cover;
+  z-index: -1;
+  opacity: .55;
+  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+}
+.testimonialLeftBox{
+  padding:45px 20px;
+  border-radius: 20px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
+  background: linear-gradient(135deg,  rgba(226,28,52,1) 0%,rgba(80,11,40,1) 100%);
+}
+.testimonialLeftBox h4 i{
+  padding: 0 5px;
+}
+.starIcontesti{
+  width: 100%;
+  height: 60px;
+  text-align: center;
+}
+.starIcontesti img{
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain;
+}
+.testimonialLeftBox a{
+  display: inline-block;
+  padding: 8px 20px;
+  color: #fff;
+  background:rgba(255, 255, 255, .2);
+  backdrop-filter: blur(10px);
+  margin-top: 30px;
+  font-size: 18px;
+}
+.testimonialLeftBox a span{
+  display: inline-flex;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  background: #fff;
+  color:var(--red-color);
+  align-items: center;
+  justify-content: center;
+  margin-left: 15px;
+  transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  font-size: 15px;
+  transition: all 0.5s ease-in-out;
+  -webkit-transition: all 0.5s ease-in-out;
+  -moz-transition: all 0.5s ease-in-out;
+  -ms-transition: all 0.5s ease-in-out;
+  -o-transition: all 0.5s ease-in-out;
+}
+.testimonialLeftBox a:hover{
+  background:#fff;
+  color:var(--red-color)
+}
+.testimonialLeftBox a:hover span{
+  background: var(--red-color);
+  color: #fff;
+}
+.glossyBorder4{
+  position: absolute;
+  top: 120px;
+  left: -1px;
+  width: 2px;
+  height: 100px;
+  z-index: 1;
+  background: #fff;
+
+}
+.glossyBorder5{
+  position: absolute;
+  bottom: -1px;
+  left: 20%;
+  width: 100px;
+  height: 2px;
+  z-index: 1;
+  background: #fff;
+}
+.glossyBorder6{
+  position: absolute;
+  top: 20px;
+  right: -1px;
+  width: 2px;
+  height: 100px;
+  z-index: 1;
+  background: #fff;
+}
+.logoTestimonial{
+  width:100%;
+  height:90px;
+  border:1px solid var(--red-color);
+  border-radius:5px;
+  -webkit-border-radius:5px;
+  -moz-border-radius:5px;
+  -ms-border-radius:5px;
+  -o-border-radius:5px;
+  background:#fff;
+  padding: 10px;
+}
+.logoTestimonial img{
+  max-width:100%;
+  max-height:100%;
+  object-fit:contain;
+}
+.glossyBorder7{
+  position: absolute;
+  top: -1px;
+  left: 5%;
+  width: 25px;
+  height: 2px;
+  z-index: 1;
+  background: #fff;
+}
+.glossyBorder8{
+  position: absolute;
+  bottom: -1px;
+  right: 5%;
+  width: 25px;
+  height: 2px;
+  z-index: 1;
+  background: #fff;
 }
