--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -12492,3 +12492,738 @@ text-align: center;
   z-index: 1;
   background: #fff;
 }
+
+
+/*  */
+.cardAbout {
+  padding: 40px 30px;
+  border: 1px solid #000;
+}
+.cardAbout .fa-star {
+  padding: 0 2px;
+  font-size: 20px;
+}
+.redDot {
+  position: relative;
+  z-index: 1;
+  overflow: hidden;
+}
+
+.title_about_2 {
+  padding-left: 150px;
+  position: relative;
+}
+
+.title_about_2,
+.title_about_2 a {
+  color: var(--red-color);
+}
+
+.title_about_2:after {
+  left: 0;
+  height: 2px;
+  background: var(--red-color);
+}
+
+.title_about_2.right:after,
+.title_about_2:after {
+  position: absolute;
+  content: "";
+  top: 50%;
+  width: 140px;
+  transform: translateY(-50%);
+}
+
+.title_about_2.right:after {
+  right: 270px;
+  height: 46px;
+  background: url(/assets/images/icons/long-arrow.png) no-repeat;
+  background-size: cover;
+}
+
+.service__item {
+  display: grid;
+  grid-template-columns: 0.8fr 2fr 2.3fr 0.5fr;
+  align-items: center;
+  padding: 35px 0;
+  border-bottom: 1px solid #ffffff89;
+  transition: all 0.3s;
+}
+.service__number {
+  font-size: 30px;
+  color: #ffffff89;
+  transition: all 0.3s;
+}
+
+.service__title {
+  font-weight: 600;
+  font-size: 26px;
+  color: #ffffff89;
+  transition: all 0.3s;
+}
+.service__text {
+  color: #ffffff89;
+  transition: all 0.3s;
+}
+
+.service__link {
+  text-align: right;
+  overflow: hidden;
+}
+
+.service__link p i,
+.service__link p:after {
+  transform: translate(0) rotate(-45deg);
+  transition: all 0.3s;
+}
+
+.service__link p:after {
+  position: absolute;
+  content: "\f061";
+  font-family: Font Awesome\ 6 Free;
+  font-weight: 900;
+  left: 0px;
+  bottom: 0px;
+  opacity: 0;
+  color: #ffffff89;
+  visibility: hidden;
+  transition: all 0.3s ease-in-out;
+}
+.service__link p {
+  position: relative;
+  display: inline-block;
+  font-size: 48px;
+  color: #ffffff89;
+}
+.service__item:hover .service__link p i {
+  transform: translate(60px, -60px) rotate(-45deg);
+  color: #fff;
+}
+
+.service__item:hover .service__link p:after {
+  opacity: 1;
+  visibility: visible;
+  color: #fff;
+}
+.service__item:hover .service__text,
+.service__item:hover .service__title,
+.service__item:hover .service__number {
+  color: #fff;
+}
+
+.img_solutions {
+  position: sticky;
+  top: 100px;
+}
+
+.img_solutions {
+  width: 95%;
+}
+.img_solutions_inner {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  height: 500px;
+  /* border: 1px solid #fff; */
+
+  /* transform: rotate(15deg) translateX(60px) translateY(30px); */
+}
+.img_solutions img {
+  position: absolute;
+  width: 100%;
+  left: -101%;
+  opacity: 0;
+
+  transition: all 0.5s ease-in-out;
+  transform: rotate(-15deg) translateX(0px) translateY(30px);
+  z-index: -99;
+}
+.img_solutions img.active {
+  position: absolute;
+  width: 100%;
+  left: 0%;
+  opacity: 1;
+  transform: rotate(0deg) translateX(0px) translateY(0px);
+}
+
+/* cta */
+.cta_solution_main {
+  position: relative;
+  z-index: 3;
+  background-image: url("/assets/images/bg/computerbg.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: bottom;
+  background-attachment: fixed;
+}
+.cta_solution_main::after {
+  content: "";
+  top: 0;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+  background-color: #000000cc;
+}
+.cta_solution_main .content p {
+  font-size: 27px;
+  color: #fff;
+}
+.cta_solution_main .content img {
+  width: 35px;
+  margin-right: 20px;
+  filter: invert();
+}
+
+@keyframes scaleFade {
+  0% {
+    transform: scale(1);
+    opacity: 1;
+  }
+  50% {
+    transform: scale(0.95);
+    opacity: 0.5;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
+.scaling-fade {
+  display: inline-block; /* Ensures smooth scaling */
+  animation: scaleFade 1.5s infinite ease-in-out;
+}
+
+.why_sib {
+  background-color: #fff;
+}
+.why_left_item {
+  position: sticky;
+  top: 150px;
+}
+.why_left_card {
+  padding: 30px;
+  background: #000;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+}
+.item_why_sib {
+  padding: 25px;
+  background-color: #fff;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+}
+.item_why_sib:hover {
+  box-shadow: var(--bs-box-shadow);
+}
+.btnPrimary {
+  background: var(--red-color);
+  border: 2px solid transparent;
+  color: #fff;
+  font-weight: 600;
+  text-transform: uppercase;
+  padding: 12px 10px;
+  border-radius: 5px;
+}
+.btnPrimary:hover {
+  background: transparent;
+  color: #fff;
+  border-color: #fff;
+}
+.item_why_sib p {
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+/* .item_why_sib.bg {
+  background-color: #333;
+  color: #fff;
+} */
+.item_why_title {
+  display: flex;
+  justify-content: space-between;
+
+  gap: 20px;
+}
+.item_why_title h5 {
+  font-size: 40px;
+  -webkit-text-stroke: 2px #33333355;
+  color: white;
+}
+
+.workflow_item_container {
+  width: 100%;
+  display: flex;
+  flex-wrap: nowrap;
+}
+.workflow_item_container .workflow_item {
+  padding: 0 15px;
+  flex: 0 1 15%;
+  transition: all 0.4s ease-in-out;
+}
+.workflow_item_container .workflow_item:not(:last-child) {
+  border-right: 1px solid #3333333d;
+}
+
+.workflow_item_container .workflow_item.active {
+  flex: 1;
+}
+.workflow_item_container .workflow_item .peraBox {
+  width: 0%;
+  overflow: hidden;
+  transition: all 0.4s ease-in-out;
+  opacity: 0;
+}
+.workflow_item_container .workflow_item.active .peraBox {
+  width: 50%;
+  overflow: hidden;
+  opacity: 1;
+}
+
+.workflow_item_container .workflow_item .peraBox p {
+  /* display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  font-size: 14px; */
+}
+
+/* fasfbha */
+
+/* key benifits  */
+.sib_power {
+  background-color: #3333331a;
+}
+.mySwiper .swiper-wrapper {
+  align-items: stretch;
+}
+.mySwiper .swiper-slide {
+  display: flex;
+  height: auto !important; /* allow dynamic height with flex */
+}
+.item_sib_power {
+  padding: 40px;
+  border: 1px solid #e0e0e0;
+  border-radius: 10px;
+  background-color: #fff;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+.item_sib_power p {
+  display: -webkit-box;
+  -webkit-line-clamp: 9;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.item_sib_power h5 {
+  font-size: 20px;
+  color: var(--red-color);
+}
+
+.power_prev,
+.power_next {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  -o-transform: translateY(-50%);
+  background-color: transparent;
+  width: 50px !important;
+  height: 50px !important;
+  border-radius: 100%;
+  transition: all 0.5s ease-in-out !important;
+  border: none !important;
+  color: #333 !important;
+  z-index: 99;
+  font-size: 20px;
+}
+.power_prev {
+  left: -50px;
+}
+.power_next {
+  right: -50px;
+}
+
+/* brand build */
+.brand_build_main {
+  background-color: #f6f6f6;
+}
+
+.brand_build .accordion-item {
+  margin-bottom: 0px;
+  border: transparent;
+  border-bottom: 1px solid #000;
+}
+.brand_build .accordion-item {
+  background-color: transparent !important;
+}
+.brand_build .accordion-button {
+  background-color: transparent;
+}
+.brand_build .accordion-item:first-of-type,
+.accordion-item:last-of-type {
+  border-radius: 0;
+}
+.brand_build .accordion-item:last-of-type .accordion-button.collapsed {
+  border-radius: 0;
+}
+.brand_build .accordion-button:not(.collapsed) {
+  color: #000;
+  background-color: transparent;
+  box-shadow: none;
+}
+.brand_build .accordion-button {
+  font-size: 20px;
+  padding: 1rem 5px;
+}
+.brand_build .accordion-body {
+  padding: 20px 0;
+}
+.brand_build_title {
+  font-size: 50px;
+}
+
+.accordion-button:not(.collapsed) {
+  color: #000;
+  background-color: transparent;
+  box-shadow: none;
+}
+
+.innerWebDesign.whiteLable {
+  background-image: url(/assets/images/banner-white-lable.jpg);
+  background-position: center;
+}
+.innerBannerTitle::before {
+  background-color: #000000cc !important;
+
+}
+/* .innerWebDesign.whiteLable h1 span {
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: #fff;
+} */
+.cta2.whiteLable {
+  position: relative;
+  z-index: 3;
+  background-image: url("/assets/images/bg/computerbg.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: bottom;
+  background-attachment: fixed;
+}
+.cta2.whiteLable::after {
+  content: "";
+  top: 0;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+  background-color: #000000cc;
+  outline: 1px solid #fff;
+  outline-offset: -20px;
+}
+.cta2 .content p {
+  font-size: 35px;
+  font-weight: 600;
+  color: #fff;
+}
+
+/* testimonoal */
+.img_grid_review {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+  display: grid;
+}
+.img_grid_review img {
+  width: 70%;
+  height: 100%;
+  object-fit: contain;
+  mix-blend-mode: darken;
+}
+
+/* case study */
+.item_case_study {
+  width: 100%;
+  box-shadow: var(--bs-box-shadow);
+  background: #fff;
+  border: 1px solid #e0e0e0e0;
+}
+.case-study-swiper .swiper-slide {
+  transition: all 0.5s ease-in-out;
+  padding: 20px;
+}
+
+.case-study-swiper .swiper-slide.swiper-slide-prev,
+.case-study-swiper .swiper-slide.swiper-slide-next {
+  scale: 0.8;
+}
+
+/*  */
+tudy-right-main {
+  background-color: var(--dark-blue-color);
+}
+.item-case-study-right {
+  background-color: #fff;
+  padding: 20px 20px 20px 0px;
+  margin-left: -2px;
+  height: 100%;
+}
+
+.item_satates {
+  padding: 15px;
+  min-height: 185px;
+  background-size: cover;
+  background-image: url(/assets/images/success-story/Infographic-File.png);
+  text-align: center;
+}
+.item_satates img {
+  width: 65px;
+  height: 65px;
+  margin-left: auto;
+  margin-right: auto;
+  /* margin-top: 5px; */
+  display: block;
+}
+.item_satates h4 {
+  margin-top: 25px;
+  font-weight: 700;
+  font-size: 40px;
+  color: var(--red-color);
+}
+.item_satates p {
+  font-size: 13px;
+  font-weight: 500;
+}
+
+.item-case-study-left .middle-img img {
+  width: 90%;
+  margin: -20px auto;
+  display: block;
+}
+.item-case-study-left a {
+  background-color: var(--red-color);
+  color: #fff;
+  padding: 4px 10px;
+  font-size: 14px;
+  border-radius: 5px;
+  margin-left: 15px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+  display: inline-block;
+  transform: translateY(-10px);
+  -webkit-transform: translateY(-10px);
+  -moz-transform: translateY(-10px);
+  -ms-transform: translateY(-10px);
+  -o-transform: translateY(-10px);
+}
+
+.item-case-study-left {
+  position: relative;
+}
+.item-case-study-left::after {
+  position: absolute;
+  content: url(/assets/images/success-story/Doted.svg);
+  top: -20px;
+  right: 10px;
+  width: 100px;
+  z-index: 2;
+}
+.item-case-study-left::before {
+  position: absolute;
+  content: url(/assets/images/success-story/Doted.svg);
+  bottom: -20px;
+  right: 50px;
+  width: 100px;
+  z-index: 2;
+}
+
+/* trusted */
+.trusted {
+  position: relative;
+  background: url(/assets/images/bg/bg-seo-drive.webp) no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  z-index: 2;
+}
+.trusted::after {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.7);
+  backdrop-filter: blur(8px);
+  z-index: -1;
+}
+.trusted p,
+.trusted h2 {
+  color: #fff;
+}
+.exp_count {
+  font-size: 105px;
+  color: #ff0000;
+  -webkit-text-stroke: 2px #ff0000;
+  transition: all 0.3s ease-in-out;
+}
+.exp_count:hover {
+  font-size: 105px;
+  color: #ff0000;
+  -webkit-text-stroke: 2px #ff0000;
+}
+
+/* case bocs */
+.casescard {
+  display: flex;
+  width: 100%;
+}
+.casebocs {
+  margin-bottom: 15px;
+  position: relative;
+  cursor: pointer;
+}
+
+.casebocs img {
+  border-radius: 8px;
+  width: 100%;
+  height: 120px;
+  -o-object-fit: cover;
+  object-fit: cover;
+}
+
+.casebocs.active img,
+.casebocs:hover img {
+  height: 300px;
+  transition: 0.6s;
+}
+
+.casebocs.active::before,
+.casebocs:hover::before {
+  background: #e53036a1;
+}
+
+.casebocs.active .case-discription h3,
+.casebocs:hover .case-discription h3 {
+  text-align: left;
+}
+
+.casebocs:before {
+  /* background: rgba(30, 82, 160, 0.8); */
+  background: #00000080;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  content: "";
+  top: 0;
+  bottom: 0;
+  z-index: 11;
+  left: 0;
+  right: 0;
+  border-radius: 8px;
+}
+
+.casebocs .case-discription {
+  position: absolute;
+  top: 25%;
+  z-index: 111;
+  padding: 20px;
+  width: 100%;
+}
+
+.casebocs .case-discription h3 {
+  text-align: center;
+  color: #fff;
+  z-index: 111;
+
+  position: relative;
+}
+
+.casebocs .case-discription p {
+  display: none;
+  font-size: 16px;
+  color: #fff;
+  margin-top: 30px;
+}
+
+.casebocs.active .case-discription p,
+.casebocs:hover .case-discription p {
+  display: block;
+  cursor: pointer;
+}
+
+/* partnership_box_content_1 */
+
+.partnership_box {
+  overflow: hidden;
+}
+.partnership_box:hover > .partnership_box_content_2 {
+  z-index: 3;
+  bottom: 0;
+}
+.partnership_box_content_1 {
+  height: 300px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 20px;
+  background-color: #33333311;
+  /* background-image: url(/assets/images/white-lable/White-Label-Google-ads.jpg);
+  background-blend-mode: multiply; */
+  box-shadow: 0 0 1px 1px #33333322;
+  border-radius: 20px;
+  /* color: #fff; */
+}
+.partnership_box_content_2 {
+  position: absolute;
+  background-color: #33333311;
+  bottom: -100%;
+  height: 300px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 20px;
+  background-color: #000;
+  box-shadow: 0 0 1px 1px #33333322;
+  border-radius: 20px;
+  transition: all 0.3s ease-in-out;
+  color: #fff;
+}
+
+/* tools */
+.white-lable-tool .toolsLogo {
+  border: none;
+}
+
+.white-lable-tool .toolsLogo img {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain;
+  filter: brightness(0) invert(1);
+  -webkit-filter: brightness(0) invert(1);
+}
+
+/* Featured */
+.featured .newsLogo{
+  border: none;
+}
+.featured .newsLogo img {
+  max-width: 100%;
+  filter: grayscale(100%);
+  max-height: 100%;
+}
+
